# studio

./: .env.signing.example  .gitignore  CONTRIBUTING.md  EXPORT-REWORK.md  HANDOFF.md  LICENSE  LUCID-CINEMATIC-MODE-PROMPT.md  README.md  SECURITY.md  biome.json  electron-builder.json5  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.github/workflows/: build.yml  ci.yml  dependency-review.yml
dist-electron/: main.js  preload.mjs
docs/: COMPUTER-USE-PLAN.md  SCENE-BUILDER-PLAN.md  SIGNING-SETUP.md  animation-engine-spec.md
electron/: electron-env.d.ts  ffmpeg.ts  main.ts  preload.ts  settings.ts  updater.ts  windows.ts
electron/ai/: aiService.ts  audioExtractor.ts  elevenLabsMusicService.ts  elevenLabsSfxService.ts  lottieSearch.ts  minimaxImageService.ts  minimaxTtsService.ts  modelManager.ts  musicService.ts  tokenUsage.ts  ttsService.ts  videoService.ts  whisper.ts
electron/automation/: browserDriver.ts  demoAgent.ts
electron/capture/: captureManager.ts  ffmpegCapture.ts  nativeCapture.ts
electron/export/: remotionExport.ts
electron/input/: inputMonitor.ts
electron/ipc/: aiHandlers.ts  captureHandlers.ts  countdownHandlers.ts  demoHandlers.ts  (+10 more)
native/: CMakeLists.txt
native/common/: README.md
native/macos/: CMakeLists.txt
native/windows/: CMakeLists.txt
public/: pro-bundle.js
scripts/: bundle-remotion.mjs
signing/: metadata.json  sign.cjs
src/: App.tsx  index.css  main.tsx  vite-env.d.ts  webview.d.ts
(+226 files in other folders)
